@@ -10,10 +10,6 @@ Tiny Applications Collection TODO List
   - add support for file names passed as arguments
   - add support for inplace modifications
 
-* extractlinks.pl
-  - an argument which makes it print relative urls where possible
-  - add manpage
-
 * FvwmTransFocus
   - Nicer config (using *FvwmTransFocus: *)
   - Set initial opacity for all windows after the module is started
@@ -28,10 +24,6 @@ Tiny Applications Collection TODO List
 
 * mp3rip
   - id3 tag support (option to read ID3 tag from a file)
-
-* pingrange.pl
-  - allow specifing several ranges of IP adresses
-  - add manpage
 
 * rot13
   - add switch to changeing the value chars should be rotated by
