@@ -1,5 +1,8 @@
 2006-10-06  Michal Nazarewicz  <mina86/AT/mina86.com>
 
+	* pingrange.pl: + more address range formats added
+	+ can specify several ranges
+
 	* mpd-show.c: + name->state was not changed after error
 	+ DEFAULT_FORMAT altered
 
